--- a/frontend/src/components/ProductsCard/productCard.css
+++ b/frontend/src/components/ProductsCard/productCard.css
@@ -3,3 +3,9 @@
     cursor: pointer;
     transition: all 0.5s ease;
 }
+
+/* In your CSS file or style tag */
+
+  .link:hover {
+    color: #550c18;
+  }
